<resources>
    <string name="app_name">Uso de Controles Básicos</string>
    <string name="titulo">CONTROLES BASICO</string>
    <string name="nombre">Escriba su nombre</string>
    <string name="apellido">Escriba su apellido</string>
    <string name="enviarDatos">ENVIAR DATOS</string>



<string name="titulo_">DETERMINAR SI ES MAYOR DE EDAD</string>
<string name="nombre_">Escriba su nombre</string>
<string name="edad">Escriba su edad</string>
<string name="enviarDatos_">ENVIAR DATOS</string>
<string name="volver">PANTALLA ANTERIOR</string>
    <string name="titulo2">TU NOMBRE ES:</string>
    <string name="titulo3">TU EDAD ES:</string>
    <string name="titulo4">ERES MAYOR DE EDAD:</string>
</resources>